--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,9 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "slick-carousel": "^1.8.1",
-    "recharts": "^2.8.0"
+    "react-slick": "^0.29.0",
+    "recharts": "^2.8.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
