--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "classname": "^0.0.0",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
