--- a/server/pom.xml
+++ b/server/pom.xml
@@ -54,6 +54,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.0.11</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.32.2</version>
+		</dependency>
+
 
 	</dependencies>
 
