--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@ckeditor/ckeditor5-table": "^40.0.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "classname": "^0.0.0",
     "classnames": "^2.3.2",
+    "font-awesome": "^4.7.0",
+    "froala-editor": "^4.1.3",
     "moment": "^2.29.4",
+    "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-froala-wysiwyg": "^4.1.3",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
