--- a/client/package.json
+++ b/client/package.json
@@ -28,11 +28,13 @@
     "react-froala-wysiwyg": "^4.1.3",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "recharts": "^2.8.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
