--- a/server/pom.xml
+++ b/server/pom.xml
@@ -81,7 +81,16 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.9.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>crypto</artifactId>
+			<version>0.0.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
