--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -13,8 +13,12 @@ spring:
     mongodb:
       database: ${MONGO_DATABSE}
       uri: mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}
-
-
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
+  sendgrid:
+    api-key: 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
 # Set level log default
 logging:
   level:
