--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "classname": "^0.0.0",
     "classnames": "^2.3.2",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^10.16.11",
     "froala-editor": "^4.1.3",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "quill": "^1.3.6",
     "react": "^18.2.0",
@@ -29,9 +31,11 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.10.1",
