--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "froala-editor": "^4.1.3",
     "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
+    "mongoose": "^8.0.3",
     "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
