--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.0",
     "classname": "^0.0.0",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.6",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.11",
     "froala-editor": "^4.1.3",
